# Mp3Db

./: .gitignore  .gitmodules  CMakeLists.txt  Mp3Db.cmake
CMakeUtils/: Mp3Db.cmake
Config/: gviminit.vim.in  mp3db.in  mp3db.py.in  mp3db.yml.in
Samples/: read-tags.cxx
Share/Data/: Config.yml  Genre.xml  Mp3Config.xml  Mp3Config.yml  Preferences.css  tango.css
Share/Data/xq/: ConfigQueries.xml  ReadGenres.xq  WriteGenres.xq  test.xq
TagRename/: CMakeLists.txt
TagRename/Include/TagRename/: AppConfig.hxx  Book.hxx  Curl.hxx  DirView.hpp  DirView.hxx  DocFileDisplayWidget.hxx  DocFileIterator.hxx  FetchBookDetails.hxx  FileModelColumn.hpp  FileModelColumn.hxx  Interface.hpp  IsbnDb.hxx  MainWindow.hpp  MainWindow.hxx  Mp3Config.hxx  Mp3FileIterator.hpp  Mp3FileIterator.hxx  Mp3String.hpp  Mp3String.hxx  MusicFileDisplayWidget.hpp  MusicFileDisplayWidget.hxx  MusicFilePropertiesWidget.hpp  MusicFilePropertiesWidget.hxx  PtreeUtils.hxx  QStringPrint.hxx  ReturnPress.hxx  XQuery.hxx  XQueryListResult.hxx  XQueryListResultExtractor.hxx  XQueryMapResult.hxx  XQueryMapResultExtractor.hxx  XQueryResult.hxx  XQueryResultExtractor.hxx  XQueryResultRule.hxx  XQueryResultString.hxx  XQueryResultTypeOf.hxx  XString.hpp  XString.hxx  Zorba.hxx
TagRename/Src/: AppConfig.cxx  Book.cxx  Curl.cxx  DirView.cxx  DocFileDisplayWidget.cxx  FetchBookDetails.cxx  IsbnDb.cxx  Main.cxx  MainWindow.cxx  Mp3Config.cxx  Mp3String.cxx  MusicFileDisplayWidget.cxx  MusicFilePropertiesWidget.cxx  QStringPrint.cxx  ReturnPress.cxx  XQuery.cxx  XQueryResult.cxx  XString.cxx  Zorba.cxx
TagRename/Ui/: MainWindow.ui  MusicFilePropertiesWidget.ui
mp3db-samples/: CMakeLists.txt  read-tags.cxx
